# browser

./: .gitignore  Cargo.toml  Makefile  README.md  RESEARCH.md
.github/workflows/: android-ci.yml  cef-ci.yml  ci.yml
android/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  lint.xml  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/browser/: MainActivity.java
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/mipmap-hdpi/: ic_launcher_round.xml
android/app/src/main/res/raw/: keep.xml
android/app/src/main/res/values/: strings.xml  styles.xml
cef/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  check_format.sh
cef/resources/macos/: Info.plist
cef/src/: app.cpp  app.h  browser_client.cpp  browser_client.h  browser_window.cpp  browser_window.h  helper_main.cpp  main.cpp  resource_util.cpp  resource_util.h
cef/tests/: smoke_test.sh  test_resource_util.cpp
src/: main.rs
src/browser/: engine.rs  error.rs  mod.rs  tab.rs
src/css/: context.rs  mod.rs  parser.rs  properties.rs  selector.rs  style.rs  values.rs
src/dom/: attributes.rs  document.rs  element.rs  mod.rs  node.rs  parser.rs
src/layout/: block.rs  box_model.rs  inline.rs  mod.rs  tree.rs
src/network/: cache.rs  client.rs  error.rs  mod.rs
src/render/: display_list.rs  gpu.rs  mod.rs  paint.rs  renderer.rs
src/ui/: events.rs  input.rs  mod.rs  window.rs
