[package]
name = "browser"
version = "0.1.0"
edition = "2021"
authors = ["Browser Team"]
description = "A production-ready web browser built in Rust"
license = "MIT"
repository = "https://github.com/example/browser"

[dependencies]
# HTML Parsing
html5ever = "0.27"
markup5ever_rcdom = "0.3"

# CSS Parsing
cssparser = "0.34"
selectors = "0.25"

# Networking
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli"] }
tokio = { version = "1.40", features = ["full"] }
url = "2.5"

# GPU Rendering
wgpu = "23.0"
winit = "0.30"
bytemuck = { version = "1.18", features = ["derive"] }

# Image handling
image = "0.25"

# Fonts
rusttype = "0.9"
fontdue = "0.9"

# Utilities
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
smallvec = "1.13"
fnv = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
futures = "0.3"
pollster = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[[bin]]
name = "browser"
path = "src/main.rs"
